force-app/main/default/objects/Ativacao__c/Ativacao__c.object-meta.xml
<CustomObject>
    <label>Ativação</label>
    <nameField>
        <label>Ativacao Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ativações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>