force-app/main/default/objects/Ativacao__c/fields/Data_Ativacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Ativacao__c</fullName>
    <label>Data de Ativação</label>
    <type>Date</type>
</CustomField>