force-app/main/default/objects/Ativacao__c/fields/Proposta__c.field-meta.xml
<CustomField>
    <fullName>Proposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proposta aprovada</description>
    <label>Proposta</label>
    <referenceTo>Proposta__c</referenceTo>
    <relationshipLabel>Ativações</relationshipLabel>
    <relationshipName>Ativacao_Proposta_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>