force-app/main/default/objects/Ativacao__c/fields/Total_Colaboradores_Ativos__c.field-meta.xml
<CustomField>
    <fullName>Total_Colaboradores_Ativos__c</fullName>
    <formula>Opportunity__r.Account.Total_Colaboradores_Ativos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Colaboradores Ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>